# pytrans-examples

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: 01_static_potential.ipynb  02_mode_solver.ipynb  02_transport.ipynb  03_transport.ipynb  04_transport_simulate.ipynb  09_double_well.ipynb  19_transport_filter_comp.ipynb  analysis.ipynb  filter_compensation.ipynb  mixed_species_obj.ipynb  mode_solver.ipynb  plotting3d.ipynb  r0.json  surface_trap.ipynb  yitterbium_string.ipynb
examples/data/: analysis_transport.json  mode_solver_figure.ipynb  r0.json  simulation_transport.json  waveform_double_well.npy  waveform_static_segmented_trap.npy  waveform_transport.npy
examples/interp/: generate_data.py  plot.py
examples/transport/: r0.json  waveform.npy  waveform_analysis.ipynb  waveform_gen.py  waveform_simulate.ipynb
models/_segtrap/: plot.py
models/_segtrap/data/: __init__.py  trap_exp.pickle
models/_segtrap/geometry/: polytools.py
models/_surface_trap/: _old_model.py  functions.py  interp.py  model.py  plot.py
models/_surface_trap/data/: make_interp_data.py  surface_trap_data.npz.REMOVED.git-id
models/cryo_sw/: __init__.py  lionix_trap_sw.json  model.py  plot.py
models/cryo_sw_interp/: __init__.py  interp.py  model.py
models/cryo_sw_interp/data/: make_data.py
models/interp/: __init__.py  loader.py  model.py
models/segmented_trap/: __init__.py  interp.py  model.py  plot.py  segmented_trap_geometry.json
models/segtrap/: __init__.py  interp.py  model.py  segtrap_electrodes.json
models/surface_trap/: __init__.py  filter.py  geometry.py  interp.py  model.py  model_electrodes.py  plot.py  surface_trap_geometry.json
paper-figures/: dodo.py  electrodes3d_segmented_trap.py  electrodes3d_surface_trap.py  fig_radial_potential_analysis.py  fig_template.py  insta.txt  integrated_beams.py  plots.ipynb  pytrans.dot  z_plot_imports.ipynb  z_test_plot_potential_layout.ipynb
paper-figures/plotting/: cpc.mplstyle  plot3d.py  settings.py  utils.py
paper-figures/sources/: plot_imports_graph.py  plot_mode_solver.py  plot_radial_potential_analysis.py  plot_static_potential.py  plot_transport.py  plot_traps.py
tests/: conftest.py  test_analysis.py  test_model.py  test_waveform_solver.py
transport/: data_transport.npy  transport.py  transport_cryo.py  transport_electrodes.py
(+30 files in other folders)
