[tool.poetry]
name = "pytrans-examples"
version = "0.1.0"
description = "Examples and showcase repo for waveform generation in actual traps with pytrans"
authors = ["cmordini <cmordini@phys.ethz.ch>"]
packages = [
     { include = "models" },
  ]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "^6.9.0"
pytrans = {path = "deps/pytrans", develop = true}
qinterp = {path = "deps/qinterp", develop = true}
rectset = {path = "deps/rectset", develop = true}
joblib = "^1.2.0"
pyvista = "^0.41.1"
doit = "^0.36.0"
pygraphviz = "^1.11"
import-deps = "^0.2.0"
figurefirst = "^0.0.6"

[tool.poetry.dev-dependencies]
ecos = "^2.0.12"
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
mypy = "^1.0.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]